[[example]]
name = "heap"

[[example]]
name = "realloc"

[dependencies]
[dev-dependencies.ufmt]
version = "0"

[dev-dependencies.ufmt-stdio]
version = "0"

[package]
description = "allocator for mos architecture"
edition = "2021"
keywords = ["llvm-mos", "mos", "alloc", "6502"]
license = "MIT OR Apache-2.0"
name = "mos-alloc"
readme = "README.md"
repository = "https://github.com/mrk-its/mos-alloc"
resolver = "2"
version = "0.2.0"
[profile.dev]
lto = true
opt-level = 1

[profile.release]
lto = true